infra/ingresses/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    # ArgoCD sirve tráfico interno en HTTPS por defecto. Esta anotación es obligatoria
    # para que el NGINX Ingress Controller se comunique correctamente con el backend.
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.tfg-plataforma.test
    secretName: argocd-tls
  rules:
  - host: argocd.tfg-plataforma.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
