infra/ingresses/pgadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pgadmin.tfg-plataforma.test
    secretName: pgadmin-tls
  rules:
  - host: pgadmin.tfg-plataforma.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
